# termites

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  flake.nix  main  projet
.github/workflows/: release.yml
include/: Application.hpp  Colonie.hpp  Coord.hpp  Couleurs.hpp  GestionnaireSprites.hpp  Grille.hpp  Jeu.hpp  Termite.hpp  TermiteVisuel.hpp  parametres.hpp  utilitaires.hpp
src/: Application.cpp  Colonie.cpp  Coord.cpp  GestionnaireSprites.cpp  Grille.cpp  Jeu.cpp  Termite.cpp  TermiteVisuel.cpp  main.cpp  main_cli.cpp  projet.cpp
